--- a/ios/MinStore/Supporting/Expo.plist
+++ b/ios/MinStore/Supporting/Expo.plist
@@ -8,9 +8,9 @@
     <true/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
-    <key>EXUpdatesSDKVersion</key>
-    <string>47.0.0</string>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@yjose/obytesapp</string>
+    <string>https://exp.host/@culy247/min-store</string>
+    <key>EXUpdatesRuntimeVersion</key>
+    <string>1.0.0</string>
   </dict>
 </plist>
