--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 version: 2
 updates:
-    - package-ecosystem: npm
-      directory: '/'
-      schedule:
-          interval: weekly
-      open-pull-requests-limit: 10
-      labels:
-          - type:dependencies
-      commit-message:
-          prefix: fix
-          prefix-development: chore
-          include: scope
+  - package-ecosystem: npm
+    directory: "/"
+    schedule:
+      interval: weekly
+    open-pull-requests-limit: 1
+    labels:
+      - type:dependencies
+    commit-message:
+      prefix: fix
+      prefix-development: chore
+      include: scope
