--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -3,12 +3,13 @@ name: IOS Production Build
 on:
   workflow_dispatch:
   release:
-    types: [published] # only run the workflow when a new release has been published
+    types: [published]
 
 jobs:
   ios-build:
     name: IOS Production Build
     runs-on: macos-latest
+    environment: ios
     defaults:
       run:
         working-directory: ios
@@ -19,7 +20,7 @@ jobs:
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
 
       - name: Restore node_modules from cache
         uses: actions/cache@v3
@@ -54,21 +55,21 @@ jobs:
         run: cd ios && pod install --repo-update && cd ..
 
       - name: Build IOS App
-        uses: yukiarrr/ios-build-action@v1.5.0
+        uses: minpham-com/ios-build-action@v1
         with:
-          project-path: ios/MyApp.xcodeproj
+          project-path: ios/MinStore.xcodeproj
           p12-base64: ${{ secrets.IOS_P12_BASE64 }}
           mobileprovision-base64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
           code-signing-identity: "iPhone Distribution"
           team-id: ${{ secrets.IOS_TEAM_ID }}
           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          workspace-path: ios/MyApp.xcworkspace
-          scheme: MyApp
+          workspace-path: ios/MinStore.xcworkspace
+          scheme: MinStore
 
       - name: "Upload app to TestFlight"
-        uses: apple-actions/upload-testflight-build@v1
+        uses: minpham-com/upload-testflight-build@v1
         with:
           app-path: "output.ipa"
-          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-          api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+          issuer-id: ${{ secrets.APPLE_STORE_ISSUER_ID }}
+          api-key-id: ${{ secrets.APPLE_STORE_API_KEY_ID }}
+          api-private-key: ${{ secrets.APPLE_STORE_API_PRIVATE_KEY }}
