--- a/cli/package.json
+++ b/cli/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "create-obytes-app",
-  "version": "1.3.0",
-  "description": "Obytes expo starter",
-  "homepage": "https://github.com/obytes/react-native-template-obytes",
+  "name": "create-app",
+  "version": "1.0.0",
+  "description": "App expo starter",
+  "homepage": "https://github.com/minpham-com/shop.app",
   "repository": {
     "type": "git",
-    "url": "https://github.com/obytes/react-native-template-obytes"
+    "url": "https://github.com/minpham-com/shop.app"
   },
   "main": "index.js",
   "scripts": {
@@ -17,9 +17,9 @@
     "utils.js"
   ],
   "dependencies": {
-    "chalk": "^4.1.2",
-    "chalk-animation": "^1.6.0",
-    "fs-extra": "^10.1.0",
-    "nanospinner": "^1.0.0"
+    "chalk": "^5.2.0",
+    "chalk-animation": "^2.0.3",
+    "fs-extra": "^11.1.0",
+    "nanospinner": "^1.1.0"
   }
 }
