--- a/eas.json
+++ b/eas.json
@@ -36,7 +36,6 @@
         "APP_ENV": "staging",
         "FLIPPER_DISABLE": "1"
       },
-
       "prebuildCommand": "prebuild --skip-dependency-update react",
       "cache": {
         "key": "eas-1"
@@ -54,11 +53,11 @@
       "env": {
         "APP_ENV": "development"
       },
-
       "prebuildCommand": "prebuild --skip-dependency-update react",
       "cache": {
         "key": "eas-1"
-      }
+      },
+      "channel": "development"
     },
     "simulator": {
       "ios": {
@@ -75,7 +74,8 @@
       "prebuildCommand": "prebuild --skip-dependency-update react",
       "cache": {
         "key": "eas-1"
-      }
+      },
+      "channel": "simulator"
     }
   },
   "submit": {
