--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "min-store",
-  "version": "2.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "expo start --dev-client",
@@ -36,80 +36,80 @@
   "dependencies": {
     "@bacons/link-assets": "^1.1.0",
     "@gorhom/bottom-sheet": "^4",
-    "@hookform/resolvers": "^2.9.8",
-    "@react-navigation/bottom-tabs": "^6.3.3",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.9.1",
+    "@hookform/resolvers": "^2.9.11",
+    "@medusajs/medusa-js": "^1.3.9",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
     "@shopify/flash-list": "1.3.1",
-    "@tanstack/react-query": "^4.3.4",
-    "axios": "^0.27.2",
-    "expo": "~47.0.12",
+    "dotenv": "^16.0.3",
+    "expo": "^47.0.12",
     "expo-dev-client": "~2.0.1",
     "expo-localization": "~14.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
     "expo-updates": "~0.15.6",
-    "i18next": "^21.9.1",
+    "i18next": "^22.4.9",
     "lodash.memoize": "^4.1.2",
     "nativewind": "^2.0.10",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.35.0",
-    "react-i18next": "^11.18.5",
+    "react-hook-form": "^7.43.1",
+    "react-i18next": "^12.1.5",
     "react-native": "0.70.5",
-    "react-native-fast-image": "^8.6.1",
-    "react-native-flash-message": "^0.3.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-mmkv": "2.5.1",
+    "react-native-mmkv": "2.7.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.18.12",
     "yarn": "^1.22.19",
-    "zod": "^3.19.1",
-    "zustand": "^4.1.1"
+    "zod": "^3.20.6",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@expo/config": "^7.0.2",
+    "@babel/core": "^7.20.12",
+    "@commitlint/cli": "^17.4.3",
+    "@commitlint/config-conventional": "^17.4.3",
+    "@expo/config": "^7.0.3",
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
-    "@react-native-community/eslint-config": "^3.1.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/jest-native": "^5.1.2",
-    "@testing-library/react-native": "^11.3.0",
-    "@types/i18n-js": "^3.8.2",
-    "@types/jest": "^29.2.1",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.2",
+    "@types/i18n-js": "^3.8.4",
+    "@types/jest": "^29.4.0",
     "@types/lodash.memoize": "^4.1.7",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
+    "@types/react": "~18.0.28",
+    "@types/react-native": "~0.71.3",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.36.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.23.0",
-    "eslint-plugin-i18n-json": "^3.1.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-tailwindcss": "^3.6.1",
-    "eslint-plugin-unicorn": "^43.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-i18n-json": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.8.3",
+    "eslint-plugin-unicorn": "^45.0.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.1",
-    "jest": "^26.6.3",
+    "husky": "^8.0.3",
+    "jest": "^29.4.2",
     "jest-coverage-badges": "^1.1.2",
-    "jest-environment-jsdom": "^29.2.2",
+    "jest-environment-jsdom": "^29.4.2",
     "jest-expo": "^47.0.0",
-    "lint-staged": "^13.0.3",
-    "metro-babel-register": "^0.73.3",
-    "np": "^7.5.0",
-    "prettier": "^2.7.1",
+    "lint-staged": "^13.1.2",
+    "metro-babel-register": "^0.75.0",
+    "np": "^7.6.3",
+    "prettier": "^2.8.4",
     "react-test-renderer": "^18.2.0",
-    "tailwindcss": "^3.1.8",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.6.3"
+    "tailwindcss": "^3.2.6",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "repository": {
     "type": "git",
